--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "react-scrollbars-custom": "^4.1.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
