--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,16 @@
-{ "version": 2, 
-"builds": [
-    {
-        "src": ".dist/server.js",
+{
+    "version": 2,
+    "builds": [
+      {
+        "src": "src/server.ts",
         "use": "@vercel/node"
-    }
-],
-"routes":[
-    {
+      }
+    ],
+    "routes": [
+      {
         "src": "/(.*)",
-        "dest": "dist/server.js"
-    }
-]
-}
+        "dest": "/src/server.ts"
+      }
+    ]
+  }
+  
